# IntegralNotes

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.claude/: skills
.tmp/python-sdk-demo/: README.txt  index.html  payload.json
Notes/: 20260417.md  README.md  Welcome.md  demo_dataset_report.py  データノートについて.md
Notes/.inline-action/: amend-python-block.md  ask.md  auto-continue.md  continue.md  make-python-block.md  mkpy.md  request.md  write.md
Notes/Data/: Chromatogram JSON To Plotly HTML_plot_202604172152.idts  Chromatogram PCA_report_202604172153.idts  Chromatograms.idts  Dataset Report Demo_report_202604172150.idts  LC Text To Chromatogram JSON_json_202604172151.idts  LC-PCA-Result.idts  PCA-Result.idts  PCA-result.idts  PCA結果.idts  my-LC-Samples.idts  report.idts  クロマトのグラフ.idts
Notes/Experiments/: 2026-04-08.md  2026-04-09.md
Notes/datasets/: my_LC_Samples.idts  source.idts
Notes/src/: chromatogram_json_to_plotly_html.py  chromatogram_pca.py  lc_text_to_chromatogram_json.py
docs/: Issues.md
docs/00_履歴/: 202604081032_UserReq.md  202604081756.md  202604081803.md  202604081809.md  202604081828.md  202604081833.md  (+383 more)
plugin-sdk/: README.md  package.json
plugin-sdk/python/: README.md  pyproject.toml
plugins/: README.md
scripts/: .copyexclude  build-installer.bat  copy-git-files.bat  copy-installers-to-onedrive.ps1  demo_dataset_report.py  demo_hello_report.py  export-tracked-files.ps1  register-codex-playwright-mcp.bat  unregister-codex-playwright-mcp.bat
(+761 files in other folders)
