[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "integral-notes-python-sdk"
version = "0.1.0"
description = "Python SDK for IntegralNotes callable blocks."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "IntegralNotes" }]
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["integral"]
